Revise JavaFX project run instructions in README
Updated instructions for running a JavaFX Maven project, simplifying the steps and clarifying the use of the javafx-maven-plugin.